--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ ul, ol {
 }
 
 .container {
-  width: 1200px;
+  width: 480px;
   margin: 0 auto;
   padding: 0 15px;
 }
@@ -40,13 +40,9 @@ ul, ol {
   color: #2196F3;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
-}
-
-.logo {
-  margin-right: 93px;
 }
 
 .logo-part {
@@ -72,17 +68,48 @@ ul, ol {
 }
 
 .site-header .container {
-  display: flex;
-  align-items: center;
+  display: block;
 }
 
 .nav-bar {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  padding: 15px 0;
+}
+
+.menu-btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  border: none;
+  background-color: transparent;
+  transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-btn .menu-btn__cross {
+  scale: 0;
+}
+
+.menu-btn.is-open {
+  transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-btn.is-open .menu-btn__cross {
+  scale: 1;
+}
+.menu-btn.is-open .menu-btn__menu {
+  scale: 0;
+}
+
+.menu-btn__icons {
+  color: currentColor;
 }
 
 .nav-bar__list {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
@@ -124,7 +151,7 @@ ul, ol {
 }
 
 .contact {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   margin-left: auto;
@@ -297,9 +324,9 @@ ul, ol {
 }
 
 .hero {
-  padding: 200px 0 200px 0;
+  padding: 118px 0 118px 0;
   text-align: center;
-  max-width: 1600px;
+  max-width: 480px;
   margin-left: auto;
   margin-right: auto;
   background-color: #C4C4C4;
@@ -315,8 +342,8 @@ ul, ol {
   max-width: 700px;
   margin: 0 auto 30px auto;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.67;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -324,7 +351,7 @@ ul, ol {
 }
 
 .hero__btn {
-  padding: 10px 32px;
+  padding: 10px 24px;
   border: none;
   border-radius: 4px;
   font-weight: 700;
@@ -557,27 +584,18 @@ ul, ol {
   background-color: #188CE8;
 }
 
-.features {
-  padding: 94px 0;
-}
-
 .features__list {
-  display: flex;
   list-style-type: none;
 }
 
 .about {
-  width: calc((100% - 90px) / 4);
-  margin-right: 30px;
+  align-items: center;
 }
 .about:nth-last-child(-n+1) {
   margin-right: 0px;
 }
 
 .about__draw {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 120px;
   margin-bottom: 20px;
   background-color: #F5F4FA;
@@ -601,26 +619,15 @@ ul, ol {
   color: #757575;
 }
 
-.works {
-  padding-bottom: 94px;
-}
-
 .works__title {
-  margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
 }
 
-.works__list {
-  display: flex;
-}
-
 .works__item {
   position: relative;
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
   list-style-type: none;
 }
 .works__item:nth-last-child(-n+1) {
@@ -644,13 +651,10 @@ ul, ol {
 }
 
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
   background-color: #F5F4FA;
 }
 
 .team__title {
-  margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
@@ -658,12 +662,10 @@ ul, ol {
 }
 
 .team__list {
-  display: flex;
+  display: block;
 }
 
 .team__card {
-  width: calc((100% - 90px) / 4);
-  margin-right: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   list-style-type: none;
@@ -671,10 +673,6 @@ ul, ol {
 }
 .team__card:nth-last-child(-n+1) {
   margin-right: 0px;
-}
-
-.manager-card {
-  padding: 30px 0;
 }
 
 .manager-card__title {
