--- a/sass/components/header/_nav.scss
+++ b/sass/components/header/_nav.scss
@@ -9,17 +9,51 @@
 }
 
 .site-header .container {
-    display: flex;
-    align-items: center;
+    display: block;
 }
 
 .nav-bar {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    padding: 15px 0;
+}
+
+.menu-btn {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background-color: transparent;
+
+    transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .menu-btn__cross {
+    scale: 0; 
+    }
+}
+
+.menu-btn.is-open {
+    transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .menu-btn__cross {
+        scale: 1;
+    }
+    .menu-btn__menu {
+        scale: 0;
+    }
+}
+
+.menu-btn__icons {
+    color: currentColor;
 }
 
 .nav-bar__list {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
