--- a/sass/components/main-page/_teammates.scss
+++ b/sass/components/main-page/_teammates.scss
@@ -1,12 +1,8 @@
 .team {
-    padding-top: 94px;
-    padding-bottom: 94px;
-
     background-color: $team-bg-color;
 }
 
 .team__title {
-    margin-bottom: 50px;
 
     font-size: 36px;
     line-height: 1.17;
@@ -15,12 +11,11 @@
 }
 
 .team__list {
-    display: flex;
+    display: block;
 }
 
 .team__card {
-    width: calc((100% - 90px) / 4);
-    margin-right: 30px;
+
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     
