--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import './components/logo';
 @import './components/header/nav';
 @import './components/header/header-contacts';
+@import './components/header/mobile-menu';
 @import './components/footer/address';
 @import './components/footer/soc-net';
 @import './components/footer/subscribe';
