--- a/css/main.css
+++ b/css/main.css
@@ -29,9 +29,16 @@ ul, ol {
 }
 
 .container {
-  width: 480px;
+  min-width: 320px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
 }
 
 .logo-bsmt, .logo {
@@ -78,7 +85,7 @@ ul, ol {
   padding: 15px 0;
 }
 
-.menu-btn {
+.menu-toggle {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -90,21 +97,21 @@ ul, ol {
   background-color: transparent;
   transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.menu-btn .menu-btn__cross {
+.menu-toggle .menu-toggle__cross {
   scale: 0;
 }
 
-.menu-btn.is-open {
+.menu-toggle.is-open {
   transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.menu-btn.is-open .menu-btn__cross {
+.menu-toggle.is-open .menu-btn__cross {
   scale: 1;
 }
-.menu-btn.is-open .menu-btn__menu {
+.menu-toggle.is-open .menu-btn__menu {
   scale: 0;
 }
 
-.menu-btn__icons {
+.menu-toggle__icons {
   color: currentColor;
 }
 
@@ -188,6 +195,50 @@ ul, ol {
   fill: #2196F3;
 }
 
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: #ffffff;
+  z-index: 999;
+  scale: 0;
+  transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-container.is-open {
+  scale: 1;
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: #fff;
+}
+
 .site-footer {
   padding: 60px 0;
   background-color: #2F303A;
@@ -195,21 +246,36 @@ ul, ol {
 
 .site-footer__box {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
 }
 
 .footer-contacts {
-  max-width: 231px;
-  margin-right: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 232px;
 }
 
 .footer-contacts__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+.footer-contacts__item {
+  text-decoration: none;
+  font-style: normal;
   list-style: none;
   font-size: 14px;
   line-height: 1.71;
+  text-align: center;
   letter-spacing: 0.03em;
-}
-.footer-contacts__list:not(:last-child) {
-  margin-bottom: 9px;
 }
 
 .footer-contacts__adds {
@@ -218,6 +284,7 @@ ul, ol {
 
 .footer-contacts__link {
   text-decoration: none;
+  list-style: none;
   color: rgba(255, 255, 255, 0.6);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -225,10 +292,17 @@ ul, ol {
   color: #2196F3;
 }
 
+.socials {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .socials__title {
   margin-bottom: 20px;
   color: #ffffff;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -265,8 +339,10 @@ ul, ol {
 }
 
 .follow {
-  display: block;
-  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .follow__title {
@@ -282,6 +358,10 @@ ul, ol {
 
 .follow__form {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
 
 .follow__email {
@@ -326,6 +406,7 @@ ul, ol {
 .hero {
   padding: 118px 0 118px 0;
   text-align: center;
+  min-width: 320px;
   max-width: 480px;
   margin-left: auto;
   margin-right: auto;
@@ -585,24 +666,29 @@ ul, ol {
 }
 
 .features__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
   list-style-type: none;
 }
 
 .about {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-}
-.about:nth-last-child(-n+1) {
-  margin-right: 0px;
 }
 
 .about__draw {
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
   height: 120px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   background-color: #F5F4FA;
 }
 
 .about__icon {
-  display: inline-block;
   border-radius: 4px;
 }
 
@@ -617,6 +703,10 @@ ul, ol {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+.works {
+  display: none;
 }
 
 .works__title {
@@ -651,10 +741,12 @@ ul, ol {
 }
 
 .team {
+  padding-bottom: 60px;
   background-color: #F5F4FA;
 }
 
 .team__title {
+  margin-bottom: 30px;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
@@ -662,20 +754,26 @@ ul, ol {
 }
 
 .team__list {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
 }
 
 .team__card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 480px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   list-style-type: none;
   background-color: #ffffff;
 }
-.team__card:nth-last-child(-n+1) {
-  margin-right: 0px;
-}
 
 .manager-card__title {
+  margin-top: 30px;
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -696,6 +794,7 @@ ul, ol {
 .manager-card__soc-list {
   display: flex;
   justify-content: center;
+  margin-bottom: 24px;
   gap: 10px;
 }
 
@@ -727,11 +826,18 @@ ul, ol {
 }
 
 .customers {
-  padding: 94px 0;
+  padding-bottom: 60px;
+}
+.customers .container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .customers__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
@@ -740,6 +846,8 @@ ul, ol {
 
 .customers__list {
   display: flex;
+  flex-wrap: wrap;
+  width: 450px;
   gap: 30px;
   list-style-type: none;
 }
@@ -748,7 +856,7 @@ ul, ol {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
 }
 
@@ -756,7 +864,7 @@ ul, ol {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
   fill: #AFB1B8;
   border: 1px solid #AFB1B8;
