--- a/sass/components/footer/_address.scss
+++ b/sass/components/footer/_address.scss
@@ -6,24 +6,38 @@
 
 .site-footer__box {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 60px;
 }
 
 .footer-contacts {
-    max-width: 231px;
-    margin-right: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    max-width: 232px;
 }
 
 .footer-contacts__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+}
+
+.footer-contacts__item {
+    text-decoration: none;
+    font-style: normal;
     list-style: none;
     font-size: 14px;
     line-height: 1.71;
+    text-align: center;
     letter-spacing: 0.03em;
-
-    &:not(:last-child) {
-    margin-bottom: 9px;
-    }
 }
-
 
 .footer-contacts__adds {
     color: $footer-color-text-secondary;
@@ -31,6 +45,8 @@
 
 .footer-contacts__link {
     text-decoration: none;
+    list-style: none;
+
     color: $footer-color-text-primary;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
