--- a/sass/components/footer/_soc-net.scss
+++ b/sass/components/footer/_soc-net.scss
@@ -1,8 +1,16 @@
+.socials {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
 .socials__title {
     margin-bottom: 20px;
     color: $footer-color-text-secondary;
 
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
