--- a/sass/components/footer/_subscribe.scss
+++ b/sass/components/footer/_subscribe.scss
@@ -1,6 +1,8 @@
 .follow {
-    display: block;
-    margin-left: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .follow__title {
@@ -17,6 +19,10 @@ text-transform: uppercase;
 
 .follow__form {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
 }
 
 .follow__email {
