--- a/sass/components/main-page/_features.scss
+++ b/sass/components/main-page/_features.scss
@@ -2,23 +2,28 @@
 }
 
 .features__list {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
     list-style-type: none;
 }
 
 .about {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    &:nth-last-child(-n + 1) {
-    margin-right: 0px;
-    }
 }
 
 .about__draw {
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
     height: 120px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     background-color: $team-bg-color;
 }
 .about__icon {
-    display: inline-block;
     border-radius: 4px;
 }
 
