--- a/sass/components/main-page/_hero.scss
+++ b/sass/components/main-page/_hero.scss
@@ -2,6 +2,7 @@
     padding: 118px 0 118px 0;
     text-align: center;
 
+    min-width: 320px;
     max-width: 480px;
     margin-left: auto;
     margin-right: auto;
