--- a/sass/components/main-page/_managers.scss
+++ b/sass/components/main-page/_managers.scss
@@ -3,6 +3,7 @@
 
 
 .manager-card__title {
+    margin-top: 30px;
     margin-bottom: 10px;
     font-weight: 500;
     font-size: 16px;
@@ -24,6 +25,7 @@
 .manager-card__soc-list {
     display: flex;
     justify-content: center;
+    margin-bottom: 24px;
     gap: 10px;
 }
 
