--- a/css/main.css
+++ b/css/main.css
@@ -97,18 +97,9 @@ main {
   background-color: transparent;
   transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.menu-toggle .menu-toggle__cross {
-  scale: 0;
-}
 
 .menu-toggle.is-open {
   transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.menu-toggle.is-open .menu-btn__cross {
-  scale: 1;
-}
-.menu-toggle.is-open .menu-btn__menu {
-  scale: 0;
 }
 
 .menu-toggle__icons {
@@ -209,34 +200,76 @@ main {
   border-radius: 50%;
   outline: none;
 }
-
 @media (min-width: 768px) {
   .menu-toggle {
     display: none;
   }
 }
+
 .menu-container {
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 32px;
+  min-height: 798px;
+  padding: 48px 40px;
   background-color: #ffffff;
   z-index: 999;
   scale: 0;
   transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .menu-container.is-open {
   scale: 1;
 }
-
 .menu-container .menu-toggle {
   position: absolute;
-  top: 16px;
-  right: 16px;
+  top: 10px;
+  right: 15px;
   color: #fff;
+}
+
+.menu-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap: 32px;
+  margin-bottom: auto;
+}
+
+.menu-bar__item {
+  position: relative;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+}
+
+.menu-bar__link {
+  text-decoration: none;
+  color: #212121;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-bar__link:hover, .menu-bar__link:focus {
+  color: #2196F3;
+}
+
+.menu-bar__link--current {
+  color: #2196F3;
+}
+.menu-bar__link--current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 3px;
+  border: 1px solid #2196F3;
+  border-radius: 2px;
+  background-color: #2196F3;
 }
 
 .site-footer {
