--- a/sass/components/header/_mobile-menu.scss
+++ b/sass/components/header/_mobile-menu.scss
@@ -12,13 +12,12 @@
   border: none;
   border-radius: 50%;
   outline: none;
-}
 
-@media (min-width: 768px) {
-  .menu-toggle {
+  @media (min-width: 768px) {
     display: none;
   }
 }
+
 
 .menu-container {
   position: fixed;
@@ -26,21 +25,68 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 32px;
+  min-height: 798px;
+  padding: 48px 40px;
   background-color: $footer-color-text-secondary;
   z-index: 999;
 
   scale: 0;
   transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &.is-open {
+    scale: 1;
+  }
+
+  & .menu-toggle {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    color: #fff;
+  }
 }
 
-.menu-container.is-open {
-  scale: 1;
+.menu-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap: 32px;
+  margin-bottom: auto;
+
 }
 
-.menu-container .menu-toggle {
+.menu-bar__item {
+  position: relative;
+  width: fit-content;
+
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+}
+
+.menu-bar__link {
+  text-decoration: none;
+  color: $text-color-primary;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover, &:focus {
+  color: $text-color-accent;
+  }
+}
+
+.menu-bar__link--current {
+  color: $text-color-accent;
+
+  &::after {
+  content: '';
   position: absolute;
-  top: 16px;
-  right: 16px;
-  color: #fff;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 3px;
+  border: 1px solid $text-color-accent;
+  border-radius: 2px;
+
+  background-color: $text-color-accent;
+  }
 }
