--- a/sass/components/header/_nav.scss
+++ b/sass/components/header/_nav.scss
@@ -17,6 +17,8 @@
     align-items: center;
     justify-content: space-between;
     padding: 15px 0;
+    // min-width: 320px;
+    // max-width: 480px;
 }
 
 .menu-toggle {
