--- a/css/main.css
+++ b/css/main.css
@@ -29,10 +29,23 @@ ul, ol {
 }
 
 .container {
-  min-width: 320px;
-  max-width: 1400px;
   margin: 0 auto;
   padding: 0 15px;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1170px) {
+  .container {
+    width: 1170px;
+  }
 }
 
 main {
@@ -208,10 +221,11 @@ main {
 
 .menu-container {
   position: fixed;
+  display: flex;
+  flex-direction: column;
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
   min-height: 798px;
   padding: 48px 40px;
   background-color: #ffffff;
@@ -234,7 +248,6 @@ main {
   flex-direction: column;
   justify-content: start;
   gap: 32px;
-  margin-bottom: auto;
 }
 
 .menu-bar__item {
@@ -270,6 +283,63 @@ main {
   border: 1px solid #2196F3;
   border-radius: 2px;
   background-color: #2196F3;
+}
+
+.menu-contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap: 32px;
+  margin-top: auto;
+  margin-bottom: 64px;
+}
+
+.menu-contact__tel {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
+.menu-contact__mail {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.menu-soc {
+  display: flex;
+  justify-content: start;
+}
+
+.menu-soc__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.menu-soc__item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+.menu-soc__item:first-child {
+  padding-left: 0;
+}
+.menu-soc__item:last-child {
+  padding-right: 0;
+}
+
+.menu-soc__link {
+  padding: 0 10px;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196F3;
 }
 
 .site-footer {
@@ -398,11 +468,10 @@ main {
 }
 
 .follow__email {
-  display: flex;
+  display: block;
   text-align: start;
-  width: 358px;
+  width: 450px;
   padding: 15px 12px 15px 16px;
-  margin-right: 12px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
@@ -507,8 +576,8 @@ main {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  min-width: 528px;
-  min-height: 581px;
+  min-width: 450px;
+  min-height: 609px;
   padding: 40px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
