--- a/sass/base/_bases.scss
+++ b/sass/base/_bases.scss
@@ -29,11 +29,23 @@ ul, ol {
 }
 
 .container {
-    min-width: 320px;
-    max-width: 1400px;
     margin: 0 auto;
     padding: 0 15px;
+
+    @media screen and (min-width: 480px) {
+        width: 480px;
+    }
+
+    @media screen and (min-width: 768px) {
+    width: 768px;
+    }
+
+    @media screen and (min-width: 1170px) {
+    width: 1170px;
+    }
+
 }
+
 main {
     display: flex;
     flex-direction: column;
