--- a/sass/components/footer/_subscribe.scss
+++ b/sass/components/footer/_subscribe.scss
@@ -26,11 +26,10 @@ text-transform: uppercase;
 }
 
 .follow__email {
-    display: flex;
+    display: block;
     text-align: start;
-    width: 358px;
+    width: 450px;
     padding: 15px 12px 15px 16px;
-    margin-right: 12px;
 
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
