--- a/sass/components/header/_mobile-menu.scss
+++ b/sass/components/header/_mobile-menu.scss
@@ -21,10 +21,11 @@
 
 .menu-container {
   position: fixed;
+  display: flex;
+  flex-direction: column;
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
   min-height: 798px;
   padding: 48px 40px;
   background-color: $footer-color-text-secondary;
@@ -50,8 +51,6 @@
   flex-direction: column;
   justify-content: start;
   gap: 32px;
-  margin-bottom: auto;
-
 }
 
 .menu-bar__item {
@@ -89,4 +88,68 @@
 
   background-color: $text-color-accent;
   }
+}
+
+.menu-contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap: 32px;
+  margin-top: auto;
+  margin-bottom: 64px;
+}
+.menu-contact__item {
+}
+.menu-contact__tel {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+
+  color: $text-color-accent;
+}
+
+.menu-contact__mail {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+
+  color: $text-color-secondary;
+}
+
+.menu-soc {
+  display: flex;
+  justify-content: start;
+}
+.menu-soc__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+
+  &:first-child {
+    padding-left: 0;
+  }
+
+  &:last-child {
+    padding-right: 0;
+  }
+
+}
+.menu-soc__link {
+  padding: 0 10px;
+
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+
+  color: $text-color-accent;
 }
