--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,7 @@ main {
 }
 
 .menu-bar__link--current {
+  text-decoration: none;
   color: #2196F3;
 }
 .menu-bar__link--current::after {
@@ -670,6 +671,24 @@ main {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
+.callback__textarea::-moz-placeholder {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.callback__textarea:-ms-input-placeholder {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.callback__textarea::placeholder {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
 .callback__textarea:focus, .callback__textarea:hover {
   outline: 1px solid #2196F3;
 }
@@ -726,16 +745,16 @@ main {
 }
 
 .callback__policy-title {
-  margin: 0 7px;
-  font-size: 14px;
-  line-height: 1.71;
+  margin: 0 0.3em;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: #757575;
 }
 
 .callback__policy-link {
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-decoration: none;
   -webkit-text-decoration-line: underline;
