--- a/sass/components/header/_mobile-menu.scss
+++ b/sass/components/header/_mobile-menu.scss
@@ -74,6 +74,7 @@
 }
 
 .menu-bar__link--current {
+  text-decoration: none;
   color: $text-color-accent;
 
   &::after {
@@ -98,8 +99,10 @@
   margin-top: auto;
   margin-bottom: 64px;
 }
+
 .menu-contact__item {
 }
+
 .menu-contact__tel {
   text-decoration: none;
   font-weight: 500;
