--- a/sass/components/main-page/_modal.scss
+++ b/sass/components/main-page/_modal.scss
@@ -142,6 +142,14 @@
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
 
+    &::placeholder {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
+    }
+
     &:focus, &:hover {
     outline: 1px solid $text-color-accent;
     }
@@ -206,16 +214,16 @@
 }
 
 .callback__policy-title {
-    margin: 0 7px;
-    font-size: 14px;
-    line-height: 1.71;
+    margin: 0 0.3em;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
 
     color: $text-color-secondary;
 }
 .callback__policy-link {
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-decoration: none;
     text-decoration-line: underline;
