--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ ul, ol {
 }
 
 .container {
+  width: 100%;
   margin: 0 auto;
   padding: 0 15px;
 }
@@ -52,6 +53,13 @@ main {
   display: flex;
   flex-direction: column;
   gap: 60px;
+}
+
+img {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 .logo-bsmt, .logo {
@@ -956,6 +964,11 @@ main {
   align-items: center;
   justify-content: center;
 }
+@media screen and (min-width: 480px) {
+  .customers .container {
+    width: 480px;
+  }
+}
 
 .customers__title {
   margin-bottom: 30px;
@@ -968,7 +981,8 @@ main {
 .customers__list {
   display: flex;
   flex-wrap: wrap;
-  width: 450px;
+  justify-content: center;
+  max-width: 450px;
   gap: 30px;
   list-style-type: none;
 }
@@ -977,7 +991,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 210px;
+  max-width: 210px;
   height: 92px;
 }
 
@@ -1008,18 +1022,19 @@ main {
 
 .gallery__nav {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  justify-content: start;
+  margin-bottom: 40px;
+  max-width: 350px;
 }
 
 .gallery__cards {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 30px;
 }
 
 .gallery-card {
-  width: calc((100% - 60px) / 3);
   list-style: none;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1032,9 +1047,7 @@ main {
 
 .gallery-btn {
   list-style: none;
-}
-.gallery-btn:not(:last-child) {
-  margin-right: 8px;
+  margin: 0 8px 15px 0;
 }
 
 .gallery-btn__text {
@@ -1065,7 +1078,7 @@ main {
   display: block;
   width: 100%;
   left: 0;
-  padding: 63px 24px;
+  padding: 77px 24px;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
