--- a/sass/components/main-page/_customers.scss
+++ b/sass/components/main-page/_customers.scss
@@ -6,6 +6,10 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        @media screen and (min-width: 480px) {
+            width: 480px;
+        }
     }
 }
 
@@ -21,7 +25,8 @@
 .customers__list {
     display: flex;
     flex-wrap: wrap;
-    width: 450px;
+    justify-content: center;
+    max-width: 450px;
 
     gap: 30px;
 
@@ -32,7 +37,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 210px;
+    max-width: 210px;
     height: 92px;
 }
 
