--- a/css/main.css
+++ b/css/main.css
@@ -359,7 +359,6 @@ img {
 .site-footer__box {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   gap: 60px;
 }
@@ -369,7 +368,6 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 232px;
 }
 
 .footer-contacts__list {
@@ -474,12 +472,13 @@ img {
   align-items: center;
   justify-content: center;
   gap: 20px;
+  width: 100%;
 }
 
 .follow__email {
   display: block;
   text-align: start;
-  width: 450px;
+  width: 100%;
   padding: 15px 12px 15px 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -491,10 +490,16 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 
+.follow__label {
+  width: 100%;
+}
+
 .follow__btn {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 200px;
+  height: 50px;
   padding: 10px 28px;
   border: none;
   border-radius: 4px;
@@ -517,7 +522,6 @@ img {
 .hero {
   padding: 118px 0 118px 0;
   text-align: center;
-  min-width: 320px;
   max-width: 480px;
   margin-left: auto;
   margin-right: auto;
@@ -585,8 +589,8 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  min-width: 450px;
-  min-height: 609px;
+  width: 100%;
+  max-width: 450px;
   padding: 40px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
