--- a/sass/components/footer/_address.scss
+++ b/sass/components/footer/_address.scss
@@ -7,7 +7,7 @@
 .site-footer__box {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
     justify-content: center;
     gap: 60px;
 }
@@ -17,8 +17,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-    max-width: 232px;
 }
 
 .footer-contacts__list {
