--- a/sass/components/footer/_subscribe.scss
+++ b/sass/components/footer/_subscribe.scss
@@ -23,12 +23,13 @@ text-transform: uppercase;
     align-items: center;
     justify-content: center;
     gap: 20px;
+    width: 100%;
 }
 
 .follow__email {
     display: block;
     text-align: start;
-    width: 450px;
+    width: 100%;
     padding: 15px 12px 15px 16px;
 
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -43,10 +44,16 @@ text-transform: uppercase;
     color: $footer-color-text-primary;
 }
 
+.follow__label {
+    width: 100%;
+}
+
 .follow__btn {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 200px;
+    height: 50px;
     padding: 10px 28px;
     border: none;
     border-radius: 4px;
