--- a/sass/components/footer/_subscribe.scss
+++ b/sass/components/footer/_subscribe.scss
@@ -3,6 +3,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @include tablet {
+        width: 450px;
+    }
 }
 
 .follow__title {
