--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,11 @@ img {
   justify-content: space-between;
   padding: 15px 0;
 }
+@media screen and (min-width: 768px) {
+  .nav-bar {
+    padding: 0;
+  }
+}
 
 .menu-toggle {
   display: inline-flex;
@@ -133,6 +138,13 @@ img {
   align-items: center;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+@media screen and (min-width: 768px) {
+  .nav-bar__list {
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+  }
+}
 
 .nav-bar__item {
   position: relative;
@@ -140,6 +152,11 @@ img {
 
 .nav-bar__item:not(:first-child) {
   margin-left: 50px;
+}
+@media screen and (min-width: 768px) {
+  .nav-bar__item:not(:first-child) {
+    margin-left: 0;
+  }
 }
 
 .nav-bar__link {
@@ -175,15 +192,25 @@ img {
   align-items: center;
   margin-left: auto;
 }
-
-.contact__item:not(:first-child) {
-  margin-left: 50px;
+@media screen and (min-width: 768px) {
+  .contact {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 0;
+    gap: 10px;
+  }
 }
 
 .contact__item {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+}
+@media screen and (min-width: 1170px) {
+  .contact__item:not(:first-child) {
+    margin-left: 50px;
+  }
 }
 
 .contact__icon {
@@ -205,6 +232,11 @@ img {
 .contact__link:hover, .contact__link:focus {
   color: #2196F3;
   fill: #2196F3;
+}
+@media screen and (min-width: 768px) {
+  .contact__link {
+    padding: 0;
+  }
 }
 
 .menu-toggle {
@@ -231,10 +263,11 @@ img {
   position: fixed;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   top: 0;
   left: 0;
   width: 100vw;
-  min-height: 798px;
+  height: 100vw;
   padding: 48px 40px;
   background-color: #ffffff;
   z-index: 999;
@@ -323,6 +356,7 @@ img {
 
 .menu-soc {
   display: flex;
+  flex-wrap: wrap;
   justify-content: start;
 }
 
@@ -355,12 +389,21 @@ img {
   padding: 60px 0;
   background-color: #2F303A;
 }
-
 .site-footer__box {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 60px;
+}
+@media screen and (min-width: 768px) {
+  .site-footer__box {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .site-footer__box.container {
+    margin: 0 auto;
+    padding: 0 89px;
+  }
 }
 
 .footer-contacts {
@@ -369,7 +412,6 @@ img {
   align-items: center;
   justify-content: center;
 }
-
 .footer-contacts__list {
   display: flex;
   flex-direction: column;
@@ -407,6 +449,11 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+@media screen and (min-width: 768px) {
+  .socials {
+    margin-left: auto;
+  }
 }
 
 .socials__title {
@@ -453,6 +500,11 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+@media screen and (min-width: 768px) {
+  .follow {
+    width: 450px;
+  }
 }
 
 .follow__title {
@@ -804,11 +856,23 @@ img {
   gap: 30px;
   list-style-type: none;
 }
+@media screen and (min-width: 768px) {
+  .features__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
 
 .about {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .about {
+    align-items: flex-start;
+    max-width: 354px;
+  }
 }
 
 .about__draw {
@@ -880,10 +944,15 @@ img {
 
 .team__title {
   margin-bottom: 30px;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
+}
+@media screen and (min-width: 768px) {
+  .team__title {
+    margin-top: 60px;
+  }
 }
 
 .team__list {
@@ -891,6 +960,12 @@ img {
   flex-direction: column;
   align-items: center;
   gap: 30px;
+}
+@media screen and (min-width: 768px) {
+  .team__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
 
 .team__card {
@@ -903,6 +978,11 @@ img {
   border-radius: 0px 0px 4px 4px;
   list-style-type: none;
   background-color: #ffffff;
+}
+@media screen and (min-width: 768px) {
+  .team__card {
+    max-width: 354px;
+  }
 }
 
 .manager-card__title {
@@ -973,10 +1053,15 @@ img {
     width: 480px;
   }
 }
+@media screen and (min-width: 768px) {
+  .customers .container {
+    width: 768px;
+  }
+}
 
 .customers__title {
   margin-bottom: 30px;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
@@ -990,6 +1075,11 @@ img {
   gap: 30px;
   list-style-type: none;
 }
+@media screen and (min-width: 768px) {
+  .customers__list {
+    max-width: 738px;
+  }
+}
 
 .customers__item {
   display: flex;
@@ -997,6 +1087,11 @@ img {
   align-items: center;
   max-width: 210px;
   height: 92px;
+}
+@media screen and (min-width: 768px) {
+  .customers__item {
+    max-width: 226px;
+  }
 }
 
 .customers__link {
@@ -1013,6 +1108,11 @@ img {
 .customers__link:hover, .customers__link:focus {
   border-color: #2196F3;
   fill: #2196F3;
+}
+@media screen and (min-width: 768px) {
+  .customers__link {
+    width: 226px;
+  }
 }
 
 .customers__icon {
