--- a/sass/base/_bases.scss
+++ b/sass/base/_bases.scss
@@ -33,15 +33,15 @@ ul, ol {
     margin: 0 auto;
     padding: 0 15px;
 
-    @media screen and (min-width: 480px) {
+    @include mobile {
         width: 480px;
     }
 
-    @media screen and (min-width: 768px) {
+    @include tablet {
     width: 768px;
     }
 
-    @media screen and (min-width: 1170px) {
+    @include desktop {
     width: 1170px;
     }
 
