--- a/sass/components/footer/_address.scss
+++ b/sass/components/footer/_address.scss
@@ -2,14 +2,26 @@
     padding: 60px 0;
 
     background-color: $footer-bg-color;
+
+    @include tablet {
+    }
 }
 
 .site-footer__box {
     display: flex;
     flex-direction: column;
-    // align-items: center;
     justify-content: center;
     gap: 60px;
+
+    @include tablet {
+        flex-direction: row;
+        flex-wrap: wrap;
+
+        &.container {
+            margin: 0 auto;
+            padding: 0 89px;
+        }
+    }
 }
 
 .footer-contacts {
@@ -17,6 +29,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @include tablet {
+    }
 }
 
 .footer-contacts__list {
