--- a/sass/components/header/_header-contacts.scss
+++ b/sass/components/header/_header-contacts.scss
@@ -3,16 +3,27 @@
     justify-content: center;
     align-items: center;
     margin-left: auto;
+
+    @include tablet {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-left: 0;
+        gap: 10px;
+    }
 }
 
-.contact__item:not(:first-child) {
-    margin-left: 50px;
-}
 
 .contact__item {
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
+
+    @include desktop {
+        &:not(:first-child) {
+            margin-left: 50px;
+        }
+    }
 }
 
 
@@ -39,4 +50,9 @@
     color: $text-color-accent;
     fill: $text-color-accent;
     }
+
+    @include tablet {
+        padding: 0;
+    }
+
 }
