--- a/sass/components/header/_mobile-menu.scss
+++ b/sass/components/header/_mobile-menu.scss
@@ -23,10 +23,11 @@
   position: fixed;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   top: 0;
   left: 0;
   width: 100vw;
-  min-height: 798px;
+  height: 100vw;
   padding: 48px 40px;
   background-color: $footer-color-text-secondary;
   z-index: 999;
@@ -125,6 +126,7 @@
 
 .menu-soc {
   display: flex;
+  flex-wrap: wrap;
   justify-content: start;
 }
 .menu-soc__item {
