--- a/sass/components/header/_nav.scss
+++ b/sass/components/header/_nav.scss
@@ -17,8 +17,10 @@
     align-items: center;
     justify-content: space-between;
     padding: 15px 0;
-    // min-width: 320px;
-    // max-width: 480px;
+
+    @include tablet {
+        padding: 0;
+    }
 }
 
 .menu-toggle {
@@ -48,6 +50,12 @@
     justify-content: center;
     align-items: center;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
+    @include tablet {
+        display: flex;
+        justify-content: space-between;
+        gap: 50px;
+    }
 }
 
 .nav-bar__item {
@@ -57,6 +65,11 @@
 
 .nav-bar__item:not(:first-child) {
     margin-left: 50px;
+
+        @include tablet {
+            margin-left: 0;
+    }
+
 }
 
 .nav-bar__link {
