--- a/sass/components/main-page/_features.scss
+++ b/sass/components/main-page/_features.scss
@@ -6,12 +6,22 @@
     flex-direction: column;
     gap: 30px;
     list-style-type: none;
+
+    @include tablet {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 }
 
 .about {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @include tablet {
+        align-items: flex-start;
+        max-width: 354px;
+    }
 }
 
 .about__draw {
