--- a/sass/components/main-page/_teammates.scss
+++ b/sass/components/main-page/_teammates.scss
@@ -6,10 +6,14 @@
 .team__title {
     margin-bottom: 30px;
 
-    font-size: 36px;
+    font-size: 28px;
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
+
+    @include tablet {
+        margin-top: 60px;
+    }
 }
 
 .team__list {
@@ -17,6 +21,11 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
+
+    @include tablet {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 
 }
 
@@ -32,4 +41,8 @@
     
     list-style-type: none;
     background-color: $footer-color-text-secondary;
+
+    @include tablet {
+        max-width: 354px;
+    }
 }
