--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import './utils/vars';
+@import './utils/mixin';
 @import './base/bases';
 @import './components/logo';
 @import './components/header/nav';
