--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -8,3 +8,4 @@
     $header-color-border: #ECECEC;
     $team-bg-color: #F5F4FA;
     $client-color-primary: #AFB1B8;
+    $bg-hero-gradient: linear-gradient(to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4));
