--- a/sass/components/main-page/_hero.scss
+++ b/sass/components/main-page/_hero.scss
@@ -7,17 +7,29 @@
     margin-right: auto;
 
     background-color: #C4C4C4;
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-        ),
-        url(../images/hero.jpg);
+    background-image: $bg-hero-gradient, url(../images/main/mob/mob-hero-1x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     border: 1px solid #000;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    @include double-pixel {
+    background-image: $bg-hero-gradient, url(../images/main/mob/mob-hero-2x.jpg);
+}
+    @include tablet {
+        background-image: $bg-hero-gradient, url(../images/main/tablet/tab-hero-1x.jpg);
+            @include double-pixel {
+                background-image: $bg-hero-gradient, url(../images/main/tablet/tab-hero-2x.jpg);
+            }
+    }
+
+    @include desktop {
+        background-image: $bg-hero-gradient, url(../images/main/desktop/pc-hero-1x.jpg);
+            @include double-pixel {
+                background-image: $bg-hero-gradient, url(../images/main/desktop/pc-hero-2x.jpg);
+            }
+    }
 }
 
 .hero__title {
