--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -15,3 +15,11 @@
         @content;        
     }
 }
+
+@mixin double-pixel {
+    @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        @content;
+        }
+}
