--- a/sass/components/header/_mobile-menu.scss
+++ b/sass/components/header/_mobile-menu.scss
@@ -27,7 +27,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vw;
+  height: 100%;
   padding: 48px 40px;
   background-color: $footer-color-text-secondary;
   z-index: 999;
@@ -107,11 +107,15 @@
 .menu-contact__tel {
   text-decoration: none;
   font-weight: 500;
-  font-size: 34px;
+  font-size: calc( (100vw - 320px)/(480 - 320) * (34 - 24) + 24px);
   line-height: 1.18;
   letter-spacing: 0.02em;
 
   color: $text-color-accent;
+
+  @include mobile {
+    font-size: 34px;
+  }
 }
 
 .menu-contact__mail {
