--- a/sass/components/main-page/_hero.scss
+++ b/sass/components/main-page/_hero.scss
@@ -26,6 +26,8 @@
     }
 
     @include desktop {
+        max-width: 1600px;
+    padding: 200px 0 200px 0;
         background-image: $bg-hero-gradient, url(../images/main/desktop/pc-hero-1x.jpg);
             @include double-pixel {
                 background-image: $bg-hero-gradient, url(../images/main/desktop/pc-hero-2x.jpg);
@@ -46,6 +48,13 @@
 
     @include tablet {
         width: 360px;
+    }
+
+    @include desktop {
+        width: 696px;
+        font-size: 44px;
+        line-height: 1.36;
+
     }
 }
 
