--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ ul, ol {
 }
 @media screen and (min-width: 1170px) {
   .container {
-    width: 1170px;
+    width: 1200px;
   }
 }
 
@@ -53,6 +53,11 @@ main {
   display: flex;
   flex-direction: column;
   gap: 60px;
+}
+@media screen and (min-width: 1170px) {
+  main {
+    gap: 94px;
+  }
 }
 
 img {
@@ -71,6 +76,14 @@ img {
   font-size: 24px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1170px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+    margin-right: 52px;
+  }
 }
 
 .logo-part {
@@ -201,18 +214,19 @@ img {
     gap: 10px;
   }
 }
+@media screen and (min-width: 1170px) {
+  .contact {
+    flex-direction: row;
+    gap: 30px;
+    margin-left: auto;
+  }
+}
 
 .contact__item {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
-@media screen and (min-width: 1170px) {
-  .contact__item:not(:first-child) {
-    margin-left: 50px;
-  }
-}
-
 .contact__icon {
   margin-right: 10px;
   color: currentColor;
@@ -236,6 +250,11 @@ img {
 @media screen and (min-width: 768px) {
   .contact__link {
     padding: 0;
+  }
+}
+@media screen and (min-width: 1170px) {
+  .contact__link {
+    padding: 32px 0;
   }
 }
 
@@ -608,6 +627,8 @@ img {
 }
 @media screen and (min-width: 1170px) {
   .hero {
+    max-width: 1600px;
+    padding: 200px 0 200px 0;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main/desktop/pc-hero-1x.jpg);
   }
 }
@@ -630,6 +651,13 @@ img {
 @media screen and (min-width: 768px) {
   .hero__title {
     width: 360px;
+  }
+}
+@media screen and (min-width: 1170px) {
+  .hero__title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
   }
 }
 
@@ -897,6 +925,11 @@ img {
     flex-wrap: wrap;
   }
 }
+@media screen and (min-width: 1170px) {
+  .features__list {
+    flex-wrap: nowrap;
+  }
+}
 
 .about {
   display: flex;
@@ -907,6 +940,11 @@ img {
   .about {
     align-items: flex-start;
     max-width: 354px;
+  }
+}
+@media screen and (min-width: 1170px) {
+  .about {
+    min-width: 270px;
   }
 }
 
@@ -940,20 +978,29 @@ img {
 .works {
   display: none;
 }
+@media screen and (min-width: 1170px) {
+  .works {
+    display: block;
+  }
+}
 
 .works__title {
+  margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
 }
 
+.works__list {
+  display: flex;
+  margin-bottom: 94px;
+  gap: 30px;
+}
+
 .works__item {
   position: relative;
   list-style-type: none;
-}
-.works__item:nth-last-child(-n+1) {
-  margin-right: 0px;
 }
 
 .works__text {
@@ -976,6 +1023,11 @@ img {
   padding-bottom: 60px;
   background-color: #F5F4FA;
 }
+@media screen and (min-width: 1170px) {
+  .team {
+    padding-bottom: 0;
+  }
+}
 
 .team__title {
   margin-bottom: 30px;
@@ -989,6 +1041,13 @@ img {
     margin-top: 60px;
   }
 }
+@media screen and (min-width: 1170px) {
+  .team__title {
+    margin-top: 0;
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
+}
 
 .team__list {
   display: flex;
@@ -1000,6 +1059,12 @@ img {
   .team__list {
     flex-direction: row;
     flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1170px) {
+  .team__list {
+    margin-bottom: 94px;
+    flex-wrap: nowrap;
   }
 }
 
@@ -1093,6 +1158,17 @@ img {
     width: 768px;
   }
 }
+@media screen and (min-width: 1170px) {
+  .customers .container {
+    padding-bottom: 94px;
+    width: 1200px;
+  }
+}
+@media screen and (min-width: 1170px) {
+  .customers {
+    padding-bottom: 0;
+  }
+}
 
 .customers__title {
   margin-bottom: 30px;
@@ -1100,6 +1176,11 @@ img {
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
+}
+@media screen and (min-width: 1170px) {
+  .customers__title {
+    font-size: 36px;
+  }
 }
 
 .customers__list {
@@ -1115,6 +1196,12 @@ img {
     max-width: 738px;
   }
 }
+@media screen and (min-width: 1170px) {
+  .customers__list {
+    min-width: 170px;
+    flex-wrap: nowrap;
+  }
+}
 
 .customers__item {
   display: flex;
@@ -1126,6 +1213,11 @@ img {
 @media screen and (min-width: 768px) {
   .customers__item {
     max-width: 226px;
+  }
+}
+@media screen and (min-width: 1170px) {
+  .customers__item {
+    min-width: 170px;
   }
 }
 
