--- a/sass/components/header/_header-contacts.scss
+++ b/sass/components/header/_header-contacts.scss
@@ -11,6 +11,12 @@
         margin-left: 0;
         gap: 10px;
     }
+
+    @include desktop {
+        flex-direction: row;
+        gap: 30px;
+        margin-left: auto;
+    }
 }
 
 
@@ -21,7 +27,7 @@
 
     @include desktop {
         &:not(:first-child) {
-            margin-left: 50px;
+            // margin-left: 50px;
         }
     }
 }
@@ -53,6 +59,10 @@
 
     @include tablet {
         padding: 0;
+    }
+
+    @include desktop {
+        padding: 32px 0;
     }
 
 }
