--- a/sass/components/footer/_address.scss
+++ b/sass/components/footer/_address.scss
@@ -22,6 +22,18 @@
             padding: 0 89px;
         }
     }
+
+    @include desktop {
+        gap: 93px;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+
+        &.container {
+            margin: 0 auto;
+            padding: 0 15px;
+        }
+
+    }
 }
 
 .footer-contacts {
@@ -30,7 +42,8 @@
     align-items: center;
     justify-content: center;
 
-    @include tablet {
+    @include desktop {
+        align-items: flex-start;
     }
 }
 
@@ -40,6 +53,10 @@
     align-items: center;
     justify-content: center;
     gap: 8px;
+
+    @include desktop {
+        align-items: flex-start;
+    }
 }
 
 .footer-contacts__item {
