--- a/sass/components/portfolio/_gallery.scss
+++ b/sass/components/portfolio/_gallery.scss
@@ -1,6 +1,6 @@
 .gallery {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .gallery__nav {
@@ -9,6 +9,16 @@
     justify-content: start;
     margin-bottom: 40px;
     max-width: 350px;
+
+    @include tablet {
+        flex-wrap: nowrap;
+        justify-content: center;
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 100%;
+        margin-bottom: 30px;
+        gap: 8px;
+    }
 }
 
 .gallery__cards {
@@ -16,6 +26,10 @@
     flex-direction: column;
     gap: 30px;
 
+    @include tablet {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 }
 
 .gallery-card {
@@ -28,5 +42,9 @@
     .gallery-card__overlay {
     transform: translateY(-100%);
         }
+    }
+
+    @include tablet {
+        max-width: 354px;
     }
 }
