--- a/sass/components/main-page/_customers.scss
+++ b/sass/components/main-page/_customers.scss
@@ -16,8 +16,8 @@
         }
 
         @include desktop {
-            padding-bottom: 94px;
             width: 1200px;
+            padding-bottom: 94px;
         }
     }
 
@@ -56,7 +56,7 @@
     }
 
     @include desktop {
-        min-width: 170px;
+        max-width: 1200px;
         flex-wrap: nowrap;
     }
 }
